--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
@@ -1,28 +1,31 @@
 {% load i18n tagging_tags fb_versions %}
 
   <div class="content-view flashmovie teaser">
-     <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/flash.png" />
-     <h2 class="title"><a href="{% url flashmovie-detail flashmovie.slug %}">{{ flashmovie.name }}</a></h2>
-    {% if flashmovie.image %}
-      <img class="teaser_icon" src="{% version flashmovie.image.path 'thumbnail' %}"/>
-    {% endif %}
-    {% if flashmovie.description %}
-      <p class="description">{{ flashmovie.description }}</p>
-    {% endif %}
-    {% if flashmovie.author %}
-      <span class="author">{% trans "By" %} {{ flashmovie.author }}</span>
-    {% endif %}
+
+     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/flash.png" /><a href="{% url flashmovie-detail flashmovie.slug %}">{{ flashmovie.name }}</a></h2>
+
+     {% if flashmovie.image %}
+       <div class="teaser_icon_container"><img class="teaser_icon" src="{% version flashmovie.image.path 'thumbnail' %}"/></div>
+     {% endif %}
+
+     {% if flashmovie.author %}
+       <div><span class="author">{% trans "By" %} {{ flashmovie.author }}</span></div>
+     {% endif %}
+
+     {% if flashmovie.description %}
+       <p class="description">{{ flashmovie.description }}</p>
+     {% endif %}
+
     {% if flashmovie.tags %}
-        <span class="tags">
-          <h3>
+        <div><span class="tags">
           {% trans "Tags" %}:
           {% tags_for_object flashmovie as flashmovie_tags %}
           {% for tag in flashmovie_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
             {{tag.name}}{% if not forloop.last%},{% endif%}
           {% endfor %}
-          </h3>
-        </span>
+        </span></div>
     {% endif %}
+
     <div class="clear"></div>
   </div>
