--- a/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
@@ -1,28 +1,31 @@
 {% load i18n tagging_tags fb_versions %}
 
   <div class="content-view document teaser">
-     <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png" />
-     <h2 class="title"><a href="{% url document-detail document.slug %}">{{ document.name }}</a></h2>
+
+    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png" /><a href="{% url document-detail document.slug %}">{{ document.name }}</a></h2>
+
     {% if document.image %}
-      <img class="teaser_icon" src="{% version document.image.path 'thumbnail' %}"/>
+      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version document.image.path 'thumbnail' %}"/></div>
     {% endif %}
+
+    {% if document.author %}
+      <div><span class="author">{% trans "By" %} {{ document.author }}</span></div>
+    {% endif %}
+
     {% if document.description %}
       <p class="description">{{ document.description }}</p>
     {% endif %}
-    {% if document.author %}
-      <span class="author">{% trans "By" %} {{ document.author }}</span>
-    {% endif %}
+
     {% if document.tags %}
-        <span class="tags">
-          <h3>
+        <div><span class="tags">
           {% trans "Tags" %}:
           {% tags_for_object document as document_tags %}
           {% for tag in document_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
             {{tag.name}}{% if not forloop.last%},{% endif%}
           {% endfor %}
-          </h3>
-        </span>
+        </span></div>
     {% endif %}
+
     <div class="clear"></div>
   </div>
