--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
@@ -1,27 +1,32 @@
 {% load i18n tagging_tags fb_versions %}
 
   <div class="content-view picture teaser picture-teaser">
-     <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/image.png"/>
-     <h2 class="title"><a href="{% url picture-detail picture.slug %}">{{ picture.name }}</a></h2>
-      <a href="{% url picture-detail picture.slug %}">
-        <img class="teaser_icon" src="{% version picture.image.path 'thumbnail' %}" border="0" />
-      </a>
-      {% if picture.description %}<p class="description">{{ picture.description }}</p>
-      {% endif %}
-    {% if picture.author %}
-        <span class="author">{% trans "By" %} {{ picture.author }}</span>
-    {% endif %}
-    {% if picture.tags %}
-        <span class="tags">
-          <h3>
+
+     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/image.png"/><a href="{% url picture-detail picture.slug %}">{{ picture.name }}</a></h2>
+
+     <a href="{% url picture-detail picture.slug %}">
+        <div class="teaser_icon_container"><img class="teaser_icon" src="{% version picture.image.path 'thumbnail' %}" border="0" /></div>
+     </a>
+
+     {% if picture.author %}
+       <div><span class="author">{% trans "By" %} {{ picture.author }}</span></div>
+     {% endif %}
+
+     {% if picture.description %}
+       <p class="description">{{ picture.description }}</p>
+     {% endif %}
+
+     {% if picture.tags %}
+        <div><span class="tags">
           {% trans "Tags" %}:
           {% tags_for_object picture as picture_tags %}
           {% for tag in picture_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
             {{tag.name}}{% if not forloop.last%},{% endif%}
           {% endfor %}
-          </h3>
-        </span>
-    {% endif %}
-    <div class="clear"></div>
+        </span></div>
+     {% endif %}
+
+     <div class="clear"></div>
+
   </div>
