--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -1,25 +1,27 @@
 {% load i18n tagging_tags fb_versions %}
 
   <div class="staticpage teaser">
-     <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" />
-     <h2 class="title"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
+
+    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" /><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
+
+    {% if staticpage.author %}
+      <!-- <div><span class="author">{% trans "By" %} {{ staticpage.author }}</span></div> -->
+    {% endif %}
+
     {% if staticpage.description %}
       <p class="description">{{ staticpage.description }}</p>
     {% endif %}
-    {% if staticpage.author %}
-      <span class="author">{% trans "By" %} {{ staticpage.author }}</span>
-    {% endif %}
+
     {% if staticpage.tags %}
-        <span class="tags">
-          <h3>
+        <div><span class="tags">
           {% trans "Tags" %}:
           {% tags_for_object staticpage as staticpage_tags %}
           {% for tag in staticpage_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
             {{tag.name}}{% if not forloop.last%},{% endif%}
           {% endfor %}
-          </h3>
-        </span>
+        </span></div>
     {% endif %}
+
     <div class="clear"></div>
   </div>
