--- a/cyclope/media/themes/neutronica/css/html-base.css
+++ b/cyclope/media/themes/neutronica/css/html-base.css
@@ -336,8 +336,11 @@ fieldset {
 }
 
 .content-view img.type_icon {
-  float: left;
+  /* float: left; */
   margin-right: 0.5em;
+  /* vertical-align: middle; */
+  position: absolute;
+  top 0; left: 0;
 }
 
 .content-view > div {
@@ -355,7 +358,9 @@ fieldset {
 }
 
 .content-view h2.title { /* teaser */
- padding-left: 47px;
+ position: relative;
+ padding-left: 48px;
+ /* text-indent: -48px; */
  font-size: 1.5em; /* 16px X 1.5em = 24px */
  margin-top: 0;
 }
@@ -411,11 +416,11 @@ fieldset {
  vertical-align: middle;
 }
 
-.content-view.tags h3 {
+.content-view .tags h3 {
  font-size: 1em; 
 }
 
-.content-view .summary
+.content-view .detail .summary
 {
  font-size: 0.875em;
  font-weight: bold;
@@ -509,12 +514,6 @@ fieldset {
  display: block;
  margin-left: 1em;
  margin-bottom: 1em;
-}
-
-
-/* ### ? ### */
-
-.picture .type_icon{
 }
 
 
