--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
@@ -8,7 +8,7 @@
   <div class="tools">
     <ul>
       {% if comment_count %}
-      <li>
+      <li class="first">
         <a href="#comments" class="comments_link">Comentarios ({{ comment_count }})</a>
       </li>
       {% endif %}
