--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
@@ -7,7 +7,7 @@
 {% alias media as 'current_object' %}
 {% alias media.video as 'media_file' %}
 
-<div class="content-view movieclip media detail">
+<div class="content-view movieclip media detail movieclip-detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
