--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -1,19 +1,19 @@
 {% load i18n tagging_tags fb_versions %}
 
-  <div class="content-view movieclip teaser">
+  <div class="content-view movieclip teaser movieclip-teaser">
 
      <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png" /><a href="{% url movieclip-detail movieclip.slug %}">{{ movieclip.name }}</a></h2>
 
      {% if movieclip.image %}
-       <div class="teaser_icon_container"><img class="teaser_icon" src="{% version movieclip.image.path 'thumbnail' %}"/></div>
-     {% endif %}
-
-     {% if movieclip.author %}
-       <div><span class="author">{% trans "By" %} {{ movieclip.author }}</span></div>
+       <div class="teaser_icon_container"><img class="teaser_icon" src="{% version movieclip.image.path 'small' %}" width="135" border="0" /></div>
      {% endif %}
 
      {% if movieclip.description %}
        <p class="description">{{ movieclip.description }}</p>
+     {% endif %}
+
+     {% if movieclip.author %}
+       <div class="author_container"><span class="author">{% trans "By" %} {{ movieclip.author }}</span></div>
      {% endif %}
 
      {% if movieclip.tags %}
