--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
@@ -5,15 +5,19 @@
     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile.png" /><a href="{% url regularfile-detail regularfile.slug %}">{{ regularfile.name }}</a></h2>
 
     {% if regularfile.image %}
-      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version regularfile.image.path 'thumbnail' %}"/></div>
-    {% endif %}
-
-    {% if regularfile.author %}
-      <div><span class="author">{% trans "By" %} {{ regularfile.author }}</span></div>
+      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version regularfile.image.path 'thumbnail' %}" width="90" border="0" /></div>
     {% endif %}
 
     {% if regularfile.description %}
       <p class="description">{{ regularfile.description }}</p>
+    {% endif %}
+
+    {% if regularfile.author %}
+      <div class="author_container"><span class="author">{% trans "By" %} {{ regularfile.author }}</span></div>
+    {% endif %}
+
+    {% if regularfile.image %}
+      <br class="floating-img-clear" />
     {% endif %}
 
     {% if regularfile.tags %}
