--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_detail.html
@@ -7,7 +7,7 @@
 {% alias media as 'current_object' %}
 {% alias media.audio as 'media_file' %}
 
-<div class="content-view soundtrack media detail">
+<div class="content-view soundtrack media detail soundtrack-detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
