--- a/cyclope/apps/medialibrary/templates/medialibrary/document_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_labeled_icon.html
@@ -4,9 +4,9 @@
     <a href="{% url document-detail document.slug %}">
       {% if document.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png"/>
-      <img src="{% version document.image.path 'thumbnail' %}"/>
+      <img src="{% version document.image.path 'thumbnail' %}" width="124" />
       {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png"/>
+      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document-medium.png"/>
       {% endif %}
 
     </a>
