--- a/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
@@ -5,15 +5,19 @@
     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png" /><a href="{% url document-detail document.slug %}">{{ document.name }}</a></h2>
 
     {% if document.image %}
-      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version document.image.path 'thumbnail' %}"/></div>
-    {% endif %}
-
-    {% if document.author %}
-      <div><span class="author">{% trans "By" %} {{ document.author }}</span></div>
+      <div class="teaser_icon_container"><img class="teaser_icon" src="{% version document.image.path 'thumbnail' %}" width="90" /></div>
     {% endif %}
 
     {% if document.description %}
       <p class="description">{{ document.description }}</p>
+    {% endif %}
+
+    {% if document.author %}
+      <div class="author_container"><span class="author">{% trans "By" %} {{ document.author }}</span></div>
+    {% endif %}
+
+    {% if document.image %}
+    <br class="floating-img-clear" />
     {% endif %}
 
     {% if document.tags %}
