--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_labeled_icon.html
@@ -4,9 +4,9 @@
       <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
       {% if externalcontent.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png"/>
-      <img src="{% version externalcontent.image.path 'thumbnail' %}"/>
+      <img src="{% version externalcontent.image.path 'thumbnail' %}" width="124" />
       {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png"/>
+      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external-medium.png"/>
       {% endif %}
 
     </a>
