--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
@@ -4,9 +4,9 @@
     <a href="{% url movieclip-detail movieclip.slug %}">
       {% if movieclip.still %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png"/>
-      <img src="{% version movieclip.still.path 'thumbnail' %}"/>
+      <img src="{% version movieclip.still.path 'thumbnail' %}" width="124" />
       {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png"/>
+      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video-medium.png"/>
       {% endif %}
 
     </a>
