--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -4,12 +4,12 @@
 
     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png" /><a href="{% url soundtrack-detail soundtrack.slug %}">{{ soundtrack.name }}</a></h2>
 
-    {% if soundtrack.author %}
-      <div class="teaser_icon_container"><span class="author">{% trans "By" %} {{ soundtrack.author }}</span></div>
-    {% endif %}
-
     {% if soundtrack.description %}
       <p class="description">{{ soundtrack.description }}</p>
+    {% endif %}
+
+    {% if soundtrack.author %}
+      <div class="author_container"><span class="author">{% trans "By" %} {{ soundtrack.author }}</span></div>
     {% endif %}
 
     {% if soundtrack.tags %}
