--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -2,6 +2,7 @@
   {% if content_relations %}
   {% regroup content_relations by other_type as relations %}
   <div class="related_contents">
+    <span>Relacionado: </span>
     <ul>
     {% for relation in relations %}
       <li class='related_type'> {{ relation.grouper }}
